# Cpp_newzip

./: CMakeLists.txt  build  hackerrank.yml  input.json
src/: main.cpp
src/include/: person.cpp  person.hpp
test/: CMakeLists.txt  person.cpp  person.json
